allow native access for hytale